tests/snapshots/presenter__presenter_finder_with_matches.snap
---
source: tests/presenter.rs
expression: "render(&finder_state_with_matches(), 100, 24)"
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││Showing first 5000 lines (truncated)                      │"
"│M     main.rs                         ││delta not found — showing plain diff                      │"
"│    ▾ inner                           ││fn main() {                                               │"
"│A       added.rs                      ││    println!("hello");                                    │"
"│    README.md                         ││}                                                         │"
"│D   gone.txt                          ││                                                          │"
"│?   scratch.log                       ││                                                          │"
"│                          ┌Go to file─────────────────────────────────┐                           │"
"│                          │                                           │                           │"
"│                          │ > main                                    │                           │"
"│                          │ src/main.rs                               │                           │"
"│                          │ src/inner/main_helper.rs                  │                           │"
"│                          │ README.md                                 │                           │"
"│                          │                                           │                           │"
"│                          └─↑↓ move · ←→ scroll · ⏎ open · esc cancel─┘                           │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────↑↓ navigate · Enter open · v view · Esc close · ? help┘"
