tests/snapshots/presenter__presenter_help.snap
---
source: tests/presenter.rs
expression: "render(&help_state(), 100, 24)"
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src    ┌Help: What's New  ▶ About  Settings───────────────────────────────────────┐           │"
"│M     main.│                                                                          │           │"
"│    ▾ inner│                             Herdr File Viewer                            │           │"
"│A       add│                    A git-aware, read-only file viewer                    │           │"
"│    README.│                                                                          │           │"
"│D   gone.tx│                   github.com/smarzban/herdr-file-viewer                  │           │"
"│?   scratch│                                                                          │           │"
"│           │                           v1.13.0 · Up to date                           │           │"
"│           │                                MIT License                               │           │"
"│           │                                                                          │           │"
"│           │   If you enjoy the file viewer, don't forget to give it a ★ on GitHub!   │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           └───────────────────────Tab/←→ switch · Esc/q close────────────────────────┘           │"
"└──────────────────────────────────────┘└────↑↓ navigate · Enter open · v view · Esc close · ? help┘"
