tests/snapshots/presenter__presenter_line_select_marker.snap
---
source: tests/presenter.rs
expression: "render(&line_select_state(3, 3, 3), 100, 24)"
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││ line one                                                 │"
"│M     main.rs                         ││ line two                                                 │"
"│    ▾ inner                           ││▶line three                                               │"
"│A       added.rs                      ││ line four                                                │"
"│    README.md                         ││ line five                                                │"
"│D   gone.txt                          ││ line six                                                 │"
"│?   scratch.log                       ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────↑↓ navigate · Enter open · v view · Esc close · ? help┘"
